--- a/layout/index.html
+++ b/layout/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout con Flexbox</title>
-    <link rel="stylesheet" href="Flexbox/estilos.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <div class="contenedor">
     <header>
         <div class="logo">
-            <img src="img/logo.png" alt="">
+            <img src="img/logo.jpg" alt="">
         </div>
 
         <nav class="menu">
