--- a/layout/index.html
+++ b/layout/index.html
@@ -2,59 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no,
+    initial-scale=1.0, maximum-scale=1.0, maximum-scale=1.0">
     <title>Layout con Flexbox</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <div class="contenedor">
-    <header>
-        <div class="logo">
-            <img src="img/logo.jpg" alt="">
-        </div>
-
-        <nav class="menu">
-            <a href="#">Inicio</a>
-            <a href="#">Blog</a>
-            <a href="#">Contacto</a>
-        </nav>
-    </header>
-    <section class="main">
-        <article>
-            <div class="thumb">
-                <img src="img/thumb.jpg" alt="">
+        <header>
+            <div class="logo">
+                <img src="img/logo.png" alt="" width="100px" height="100px">
             </div>
 
-            <h2>Titulo del articulo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ea atque quas enim, id earum facere distinctio 
-                ipsum quae tempore minima delectus perferendis libero ut quisquam maiores dolor tempora voluptatem.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora maiores nobis laboriosam dicta, veniam, suscipit 
-            rem molestiae laborum aliquam cumque voluptas est ipsa aliquid consectetur ipsum natus temporibus? Doloremque, recusandae!</p>
+            <nav class="menu">
+                <a href="#">Inicio</a>
+                <a href="#">Blog</a>
+                <a href="#">Contacto</a>
+            </nav>
+        </header>
+        <section class="main">
+            <article>
+                <div class="thumb">
+                    <img src="img/thumb.jpg" alt="">
+                </div>
 
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ea atque quas enim, id earum facere distinctio 
-                ipsum quae tempore minima delectus perferendis libero ut quisquam maiores dolor tempora voluptatem.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora maiores nobis laboriosam dicta, veniam, suscipit 
-            rem molestiae laborum aliquam cumque voluptas est ipsa aliquid consectetur ipsum natus temporibus? Doloremque, recusandae!</p>
-        </article>
-    </section>
-    <aside>
-        <div class="ad">
-            <p>AD</p>
-        </div>
+                <h2>Titulo del articulo</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ea atque quas enim, id earum facere distinctio 
+                    ipsum quae tempore minima delectus perferendis libero ut quisquam maiores dolor tempora voluptatem.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora maiores nobis laboriosam dicta, veniam, suscipit 
+                rem molestiae laborum aliquam cumque voluptas est ipsa aliquid consectetur ipsum natus temporibus? Doloremque, recusandae!</p>
 
-        <div class="ad">
-            <p>AD</p>
-        </div>
-    </aside>
-    <footer>
-        <div class="autor">
-            <p>Creado por Paco Flores</p>
-        </div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ea atque quas enim, id earum facere distinctio 
+                    ipsum quae tempore minima delectus perferendis libero ut quisquam maiores dolor tempora voluptatem.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora maiores nobis laboriosam dicta, veniam, suscipit 
+                rem molestiae laborum aliquam cumque voluptas est ipsa aliquid consectetur ipsum natus temporibus? Doloremque, recusandae!</p>
+            </article>
+        </section>
+        <aside>
+            <div class="ad">
+                <p>AD</p>
+            </div>
 
-        <div class="redes-sociales">
-            <a href="http://www.facebook.com/Paco Uriel"> facebook</a>
-        </div>
-    </footer>
-</div>
+            <div class="ad">
+                <p>AD</p>
+            </div>
+        </aside>
+        <footer>
+            <div class="autor">
+                <p>Creado por Paco Flores</p>
+            </div>
+
+            <div class="redes-sociales">
+                <a href="http://www.facebook.com/Paco Uriel"> facebook</a>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
